--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -1,1 +1,3 @@
-error.notfound=Recurso no disponible
+error.notfound = Recurso no disponible
+exception.productInvalid = El Producto no es Valido
+exception.billInvalid = La Factura no es Valido
