no sirve ya se viene el formateo final

--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -1,3 +1,7 @@
 error.notfound = Recurso no disponible
 exception.productInvalid = El Producto no es Valido
 exception.billInvalid = La Factura no es Valido
+
+
+exception.codeError = El código ingresado no es valida
+exception.cantidadItemError = La cantidad ingresada del item es incorrecta
