Spring boot security sin password encoder

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -7,3 +7,4 @@ exception.cantidadItemError = The count of item not is valid
 exception.valueItemError = The value of product not is valid
 exception.valueBillError = The value of bill not is valid
 invalidNameBill = The name of bill not is valid
+userOrPasswordIncorrect = User or Password Incorrect
